# kube-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: guide.md
helm/: Chart.yaml  kube-agent-values.yaml  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  extra-resources.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml  pvc.yaml  role.yaml  rolebinding.yaml  scaledobject.yaml  service.yaml  serviceaccount.yaml  triggerauthentication.yaml
src/kube_agent/: __init__.py  agent.py  cli.py  config.py  file_ops.py  gitea_ops.py  kubernetes_ops.py  llm.py  main.py  tools.py
tests/: test_config.py  test_tools.py
